remove div class to fix bug of cut off anchor button on mobile devices

--- a/main.css
+++ b/main.css
@@ -111,7 +111,6 @@ img {display: block;}
     color: rgb(254, 224, 51);
 }
 
-.amazon-button-div {margin: 5% 0 5% 0;}
 
 .amazon-link {
     margin: 10% 0 10% 0;
